[tool.poetry]
name = "agentic-gtd-system"
version = "0.1.0"
description = "A dynamic routing system for GTD-based agentic workflows"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-ollama = "^0.2.0"
langgraph = "^0.2.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
