[project]
name = "agentic-gtd-system"
version = "0.1.0"
description = "Happy little woker bees for every ocasion."
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "deepagents (>=0.5.2,<0.6.0)",
    "langgraph-prebuilt (>=1.0.9,<2.0.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
]

[tool.poetry]
# This section is now minimal as metadata moved to [project]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
